09-AWS-EKS-Lab/kubernetes/kubernetes-lab/Ingress/helloworld-v2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-v2
  template:
    metadata:
      labels:
        app: helloworld-v2
    spec:
      containers:
        - name: k8s-demo
          image: wardviaene/k8s-demo:2
          ports:
            - name: nodejs-port
              containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v2
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30001
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: helloworld-v2
